--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Emergency Home Services Website</title>
+      <title>Inistnt-Book instant help in 10 minutes</title>
+      <link rel="icon" type="image/png" href="/logo.png" />
     </head>
 
     <body>
